fixed css for h1 display none on mobile and css for 20year box

--- a/styles/style.css
+++ b/styles/style.css
@@ -507,6 +507,8 @@ img {
 
 ***/
 
+.DHWmobile{font-size:10px;}
+
 .sec-title {
   position: relative;
   z-index: 2;
@@ -1784,7 +1786,7 @@ img {
   font-size: 23px;
   font-weight: 700;
   line-height: 1.3em;
-  margin-top: 35px;
+  margin-top: 20px;
   font-family: "Open Sans", sans-serif;
 }
 
@@ -3276,7 +3278,7 @@ img {
 
 .page-title h1 {
   color: #ffffff;
-  font-size: 68px;
+  font-size: 58px;
   text-transform: uppercase;
 }
 
