--- a/styles/susan.css
+++ b/styles/susan.css
@@ -143,8 +143,21 @@ p.about{padding:20px;margin-left:10%;margin-right:10%}
 
 .allBlogs {width: 110px;margin-left:10px;margin-top:20px;background-color:#00204c}
 .allBlogs a {color:white; margin-left:10px;}
+.bigblogtitle{padding-top: 50px;color:white}
 
-@media (max-width: 995px) {
+.blogArticle h2{padding-top: 25px; padding-bottom:15px;}
+.blogArticle  ol li {list-style-type: disc; font-size:.85em; margin-left:5%}
+.blogArticle  ul li {list-style-type: disc; font-size:.85em; margin-left:5%}
+.blogArticle p{padding-top:15px}
+
+h2{padding-bottom:25px;}
+.moveRight{margin-left:15px;}
+
+
+
+
+@media (max-width: 995px) 
+{
 .blog-title{
 	position:relative;
 	padding:00px 0px 60px;
@@ -156,12 +169,13 @@ p.about{padding:20px;margin-left:10%;margin-right:10%}
 }
 }
 
-.bigblogtitle{padding-top: 50px;color:white}
 
-.blogArticle h2{padding-top: 25px; padding-bottom:15px;}
-.blogArticle  ol li {list-style-type: disc; font-size:.85em; margin-left:5%}
-.blogArticle  ul li {list-style-type: disc; font-size:.85em; margin-left:5%}
-.blogArticle p{padding-top:15px}
 
-h2{padding-bottom:25px;}
-.moveRight{margin-left:15px;}
+/* Hide the big h1 tag on mobile so that the menu appears */
+
+
+ @media (max-width: 767px) {
+        .hidden-mobile {
+          display: none;
+        }
+      }
